--- a/docs/Milestone 3/bib.tex
+++ b/docs/Milestone 3/bib.tex
@@ -4,7 +4,7 @@
   title =        "NoSQL",
   url =          "https://www.mongodb.com/resources/basics/databases/nosql-explained",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "Mach 02, 2024",
 }
 
 @online{core,
@@ -13,7 +13,7 @@
   title =        "CoreOS",
   url =          "https://fedoraproject.org/coreos/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 10, 2024",
 }
 
 @online{documentation,
@@ -22,7 +22,7 @@
   title =        "etcd documentation",
   url =          "https://etcd.io/docs/v3.5/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 01, 2024",
 }
 
 @online{red,
@@ -31,7 +31,7 @@
   title =        "RedHat",
   url =          "https://www.redhat.com/en",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 07, 2024",
 }
 
 @online{key,
@@ -40,7 +40,7 @@
   title =        "Key-value databases",
   url =          "https://aerospike.com/what-is-a-key-value-store/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 19, 2024",
 }
 
 @online{impedance,
@@ -49,7 +49,7 @@
   title =        "Impedance Mismatch",
   url =          "https://devblogs.microsoft.com/oldnewthing/20180123-00/?p=97865",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 06, 2024",
 }
 
 @online{db-engines,
@@ -67,7 +67,7 @@
   title =        "etcd",
   url =          "https://etcd.io/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 30, 2024",
 }
 
 @online{ibm,
@@ -76,7 +76,7 @@
   title =        "What is etcd?",
   url =          "https://www.ibm.com/topics/etcd",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 27, 2024",
 }
 
 @online{ibm_CAP,
@@ -85,7 +85,7 @@
   title =        "What is the CAP Theorem?",
   url =          "https://www.ibm.com/topics/cap-theorem",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 08, 2024",
 }
 
 @online{transaction,
@@ -94,7 +94,7 @@
     title=         "etcd API",
     url=           "https://etcd.io/docs/v3.5/learning/api/#transaction",
     month=         april,
-    lastacessed=   "May 11, 2024"
+    lastacessed=   "May 03, 2024"
 }
 
 @online{dbdb,
@@ -113,7 +113,7 @@
   title =        "Deep Dive into etcd: A Distributed Key-Value Store",
   url =          "https://medium.com/@extio/deep-dive-into-etcd-a-distributed-key-value-store-a6a7699d3abc",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 01, 2024",
 }
 
 @online{etcd_clustering,
@@ -122,7 +122,7 @@
   title =        "Clustering Guide",
   url =          "https://etcd.io/docs/v3.4/op-guide/clustering/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 30, 2024",
 }
 
 @online{etcd_faq,
@@ -131,7 +131,7 @@
   title =        "Frequently Asked Questions",
   url =          "https://etcd.io/docs/v3.3/faq/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 06, 2024",
 }
 
 @online{raft,
@@ -140,7 +140,7 @@
   title =        "Raft Consensus Algorithm",
   url =          "https://raft.github.io/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 03, 2024",
 }
 
 @online{etcd_api,
@@ -159,7 +159,7 @@
   title =        "How to watch keys",
   url =          "https://etcd.io/docs/v3.5/tutorials/how-to-watch-keys/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 08, 2024",
 }
 @online{etcd_interacting,
   author =       "CoreOS",
@@ -167,7 +167,7 @@
   title =        "Interacting with etcd",
   url =          "https://etcd.io/docs/v3.6/dev-guide/interacting_v3/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 02, 2024",
 }
 
 @online{etcd_ts,
@@ -176,7 +176,7 @@
   title =        "ETCD3",
   url =          "https://github.com/microsoft/etcd3",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 02, 2024",
 }
 
 @online{etcd_python,
@@ -185,7 +185,7 @@
   title =        "Python-etcd",
   url =          "https://github.com/kragniz/python-etcd3",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 03, 2024",
 }
 
 @online{etcd_library,
@@ -194,7 +194,7 @@
   title =        "ETCD Libraries",
   url =          "https://etcd.io/docs/v3.3/integrations/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 01, 2024",
 }
 
 @online{etcd_clt,
@@ -212,7 +212,7 @@
   title =        "Data Model",
   url =          "https://etcd.io/docs/v3.3/learning/data_model/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 03, 2024",
 }
 
 @online{etcd_microsoft,
@@ -221,7 +221,7 @@
   title =        "etcd",
   url =          "https://github.com/microsoft/etcd3/tree/master/src/test",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 03, 2024",
 }
 
 @online{etcd_why,
@@ -230,7 +230,7 @@
   title =        "Wht etcd",
   url =          "https://etcd.io/docs/v3.1/learning/why/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 05, 2024",
 }
 
 @online{etcd_sys_limits,
@@ -239,7 +239,7 @@
   title =        "System limits",
   url =          "https://etcd.io/docs/v3.4/dev-guide/limit/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 05, 2024",
 }
 
 @online{etcd_hw,
@@ -248,7 +248,7 @@
   title =        "Hardware recommendations",
   url =          "https://etcd.io/docs/v3.3/op-guide/hardware/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 10, 2024",
 }
 
 @online{b-tree,
@@ -266,7 +266,7 @@
   title =        "etcd Google groups",
   url =          "https://groups.google.com/g/etcd-dev",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 08, 2024",
 }
 
 @online{twitter,
@@ -275,7 +275,7 @@
   title =        "etcd Twitter",
   url =          "https://twitter.com/etcdio",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 03, 2024",
 }
 
 @online{github,
@@ -284,7 +284,7 @@
   title =        "etcd Github",
   url =          "https://github.com/etcd-io/etcd/discussions",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 28, 2024",
 }
 
 @online{com,
@@ -293,7 +293,7 @@
   title =        "etcd Community",
   url =          "https://etcd.io/community/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 21, 2024",
 }
 
 @online{acid,
@@ -302,7 +302,7 @@
   title =        "etcd ACID properties",
   url =          "https://www.geeksforgeeks.org/acid-properties-in-dbms/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 07, 2024",
 }
 
 @online{http,
@@ -311,7 +311,7 @@
   title =        "HTTP and TLS",
   url =          "https://www.cloudflare.com/en-gb/learning/ssl/transport-layer-security-tls/",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 07, 2024",
 }
 
 @online{crud,
@@ -320,7 +320,7 @@
   title =        "CRUD",
   url =          "https://www.codecademy.com/article/what-is-crud",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 08, 2024",
 }
 
 @online{redis,
@@ -329,7 +329,7 @@
   title =        "Redis Database",
   url =          "https://redis.io",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "May 05, 2024",
 }
 
 @online{zoo,
@@ -338,7 +338,7 @@
   title =        "Apache ZooKeeper",
   url =          "https://zookeeper.apache.org",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 21, 2024",
 }
 
 @online{consul,
@@ -347,7 +347,7 @@
   title =        "Consul",
   url =          "https://www.consul.io",
   month =        may,
-  lastaccessed = "May 09, 2024",
+  lastaccessed = "April 29, 2024",
 }
 
 @online{faker,
@@ -356,5 +356,50 @@
   title =        "Python Faker",
   url =          "https://faker.readthedocs.io/en/master/",
   month =        may,
+  lastaccessed = "April 12, 2024",
+}
+
+@online{docker,
+  author =       "Docker",
+  year =         "2023",
+  title =        "Docker documentation",
+  url =          "https://www.docker.com",
+  month =        may,
   lastaccessed = "May 09, 2024",
+}
+
+@online{tailwind,
+  author =       "TailwindCSS",
+  year =         "2023",
+  title =        "TailwindCSS",
+  url =          "https://tailwindcss.com",
+  month =        may,
+  lastaccessed = "May 10, 2024",
+}
+
+@online{node,
+  author =       "NodeJS",
+  year =         "2023",
+  title =        "NodeJS",
+  url =          "https://nodejs.org/en/download",
+  month =        may,
+  lastaccessed = "May 10, 2024",
+}
+
+@online{kubernetes,
+  author =       "Mathew Palmer",
+  year =         "2024",
+  title =        "How Does Kubernetes Use etcd?",
+  url =          "https://matthewpalmer.net/kubernetes-app-developer/articles/how-does-kubernetes-use-etcd.html",
+  month =        may,
+  lastaccessed = "May 12, 2024",
+}
+
+@online{coreos,
+  author =       "Red Hat",
+  year =         "2021",
+  title =        "What was CoreOS and CoreOS container Linux?",
+  url =          "https://www.redhat.com/en/technologies/cloud-computing/openshift/what-was-coreos",
+  month =        may,
+  lastaccessed = "May 12, 2024",
 }
